@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add support for managing finite resources
 0.2.5
     Require hashable-1.1.2.3, which has a TypeRep instance
     Add Data/Typeable instances for ShakeOptions
